syntax = "proto3";
package jackaldao.canine.notifications;

import "notifications/notifications.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/jackal-dao/canine/x/notifications/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateNotifications(MsgCreateNotifications) returns (MsgCreateNotificationsResponse);
  rpc UpdateNotifications(MsgUpdateNotifications) returns (MsgUpdateNotificationsResponse);
  rpc DeleteNotifications(MsgDeleteNotifications) returns (MsgDeleteNotificationsResponse);
  rpc SetCounter(MsgSetCounter) returns (MsgSetCounterResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateNotifications {
  string creator = 1;
  string notification = 2;
  string address = 3;
}
message MsgCreateNotificationsResponse {}

message MsgUpdateNotifications {
  string creator = 1;
  uint64 count = 2;

  string notification = 3;
  string address = 4;
}
message MsgUpdateNotificationsResponse {}

message MsgDeleteNotifications {
  string creator = 1;
  uint64 count = 2;
}
message MsgDeleteNotificationsResponse {}

message MsgSetCounter {
  string creator = 1;
}

message MsgSetCounterResponse {
}

// this line is used by starport scaffolding # proto/tx/message
